# flake8-patch

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
flake8_patch/: errors.py  plugin.py
flake8_patch/visitors/: assignment.py
tests/: test_PAT001_assignment_to_imported_name.py
