[tool.poetry]
name = "flake8-patch"
version = "0.1.0"
description = "A flake8 plugin checking for mocking issues."
authors = ["Luiz Geron <luiz@geron.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geron/flake8-patch"
homepage = "https://pypi.org/project/flake8-patch"
keywords = ["flake8", "mock"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Plugins",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Mocking",
]

[tool.poetry.plugins."flake8.extension"]
MOC0 = "flake8_patch.plugin:PatchPlugin"

[tool.poetry.dependencies]
python = "^3.6"
flake8_plugin_utils = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
bump2version = "^1.0.0"
flake8 = "^3.0.0"
mypy = "^0.782"
pylint = "^2.6"
pytest = "^6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
